# tap-google-play

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  meltano.yml  noxfile.py  pyproject.toml  tox.ini
.github/: dependabot.yml  renovate.json5
.github/workflows/: autofix.yml  constraints.txt  release.yaml  test.yml
tap_google_play/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tap_google_play/tests/: __init__.py  test_core.py
tests/: test_core.py
