[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tap-google-play"
description = "Singer tap for GooglePlay, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "GooglePlay",
  "Meltano",
  "singer.io",
]
license = "Apache-2.0"
maintainers = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrmondragon@hey.com" },
]
authors = [
  { name = "hotglue", email = "hello@hotglue.xyz" },
  { name = "Edgar Ramírez-Mondragón", email = "edgarrmondragon@hey.com" },
]
requires-python = ">=3.8"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "google-play-scraper==1.2.7",
  "singer-sdk~=0.39.0",
]

scripts.tap-google-play = "tap_google_play.tap:TapGooglePlay.cli"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
src = [
  "tap_google_play",
  "tests",
]
lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN101", # missing-type-self
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
]
lint.per-file-ignores."noxfile.py" = [
  "ANN",
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.unfixable = [
  "ERA001", # commented-out-code
]
lint.flake8-annotations.allow-star-arg-any = true
lint.isort.known-first-party = [
  "tap_google_play",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.pytest.ini_options]
addopts = "-vvv"
filterwarnings = [
  "error",
  "default:No records were available to test:UserWarning",
]

[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "google_play_scraper.*", # https://github.com/JoMingyu/google-play-scraper/issues/223
]

[tool.uv]
dev-dependencies = [
  "mypy>=1.11.1",
  "pytest>=7",
  "singer-sdk[testing]~=0.39.1",
  "pytest-github-actions-annotate-failures>=0.2.0",
]
